--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,6 +77,7 @@
     --sidebar-accent-foreground: 240 5.9% 10%;
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
+    --radius: 0.5rem;
   }
 
   .dark {
@@ -112,6 +113,7 @@
     --sidebar-accent-foreground: 240 4.8% 95.9%;
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
+    --radius: 0.5rem;
   }
 }
 
@@ -445,15 +447,27 @@
   }
 
   .sidebar-link {
-    @apply flex gap-3 items-center py-1 md:p-3 2xl:p-4 rounded-lg justify-center xl:justify-start;
+    @apply flex gap-5 mt-1;
+  }
+
+  .sidebar-link-active {
+    @apply bg-[#2e90fa] text-primary-foreground shadow-md !important;
   }
 
   .sidebar-label {
     @apply text-16 font-semibold text-black-2 max-xl:hidden;
   }
+
+  /* Elimina padding de los botones del sidebar cuando está colapsado en variante icon */
+  .sidebar-collapsed .sidebar-link,
+  [data-collapsed="true"] .sidebar-link {
+    @apply p-0 !important;
+  }
+  .sidebar-collapsed .sidebar-link > button,
+  [data-collapsed="true"] .sidebar-link > button {
+    @apply p-0 !important;
+  }
 }
-
-
 
 @layer base {
   * {
