--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -184,7 +184,7 @@
   }
 
   .home-content {
-    @apply no-scrollbar flex w-full flex-1 flex-col gap-8 py-7 lg:py-9 xl:max-h-screen xl:overflow-y-scroll;
+    @apply no-scrollbar flex w-full flex-1 flex-col gap-8 py-7 lg:py-9 pr-4 xl:max-h-screen xl:overflow-y-scroll;
   }
 
   .home-header {
@@ -229,7 +229,7 @@
 
   /* Right sidebar */
   .right-sidebar {
-    @apply no-scrollbar hidden h-screen max-h-screen flex-col border-l border-gray-200 xl:flex w-[355px] xl:overflow-y-scroll !important;
+    @apply no-scrollbar hidden h-screen max-h-screen flex-col border-l border-gray-200 xl:flex w-1/5 xl:overflow-y-scroll !important;
   }
 
   .profile-banner {
