--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -229,7 +229,7 @@
 
   /* Right sidebar */
   .right-sidebar {
-    @apply no-scrollbar hidden h-screen max-h-screen flex-col border-l border-gray-200 xl:flex w-1/5 xl:overflow-y-scroll !important;
+    @apply no-scrollbar hidden h-screen max-h-screen flex-col border-l border-gray-200 xl:flex w-auto xl:overflow-y-scroll !important;
   }
 
   .profile-banner {
@@ -237,7 +237,7 @@
   }
 
   .profile {
-    @apply relative flex px-6 max-xl:justify-center;
+    @apply relative flex px-4 max-xl:justify-center;
   }
 
   .profile-img {
@@ -245,11 +245,11 @@
   }
 
   .profile-details {
-    @apply flex flex-col pt-24;
+    @apply flex flex-col pt-20;
   }
 
   .profile-name {
-    @apply text-24 font-semibold text-gray-900;
+    @apply text-20 font-semibold text-gray-900;
   }
 
   .profile-email {
@@ -257,7 +257,7 @@
   }
 
   .banks {
-    @apply flex flex-col justify-between gap-8 px-6 py-8;
+    @apply flex flex-col justify-between gap-8 px-4 py-3;
   }
 
   /* My Banks */
