--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -309,7 +309,7 @@
 
   /* Bank Info */
   .bank-info {
-    @apply gap-[18px] flex p-4 transition-all border bg-blue-25 border-transparent;
+    @apply w-full h-full flex justify-around p-4 transition-all border bg-blue-25 border-transparent;
   }
 
   /* Category Badge */
@@ -405,7 +405,7 @@
 
   /* Bank Info */
   .bank-info_content {
-    @apply flex flex-1 items-center justify-between gap-2 overflow-hidden;
+    @apply flex-col justify-items-start gap-2 overflow-hidden;
   }
 
   /* Footer */
