--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -375,7 +375,7 @@
 
   /* Payment Transfer */
   .payment-transfer {
-    @apply no-scrollbar flex flex-col overflow-y-scroll bg-gray-25 p-8 md:max-h-screen xl:py-12;
+    @apply no-scrollbar flex flex-col overflow-y-scroll bg-gray-25 p-8 md:max-h-screen xl:py-12 w-full;
   }
 
   .payment-transfer_form-item {
