feat: update banktab-item-text font size for improved readability

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -330,7 +330,7 @@
   }
 
   .banktab-item-text {
-    @apply text-[16px] font-semibold leading-[20px] transition-colors pr-2 py-1;
+    @apply text-sm font-semibold leading-[20px] transition-colors pr-2 py-1;
   }
 
   .banktab-item-text-active {
