--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -135,7 +135,7 @@
   }
 
   .header-2 {
-    @apply text-base font-medium text-gray-900;
+    @apply text-base font-semibold text-gray-900;
   }
 
   .text-10 {
